--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
 			<version>${quartz.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-core</artifactId>
+			<version>2.5.2</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
